# OrbSycl

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
include/: Evaluator.hpp  Functions.hpp  Timer.hpp  runCommands.hpp
src/: CMakeLists.txt  Evaluator.cpp  Functions.cpp  Makefile  main.cpp  runCommands.cpp  vol.x
